--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
 body {
   margin: 0;
 }
+@media print {
+  nav {
+    visibility: hidden !important;
+  }
+}
 
 .resource-label {
   display: flex;
